--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -15,6 +15,9 @@ encoding//src/controller/AdminIndexUsersController.java=UTF-8
 encoding//src/controller/AuthenLoginController.java=UTF-8
 encoding//src/controller/AuthenRegisterController.java=UTF-8
 encoding//src/controller/PublicCartController.java=UTF-8
+encoding//src/controller/PublicCartDecreaseItemController.java=UTF-8
+encoding//src/controller/PublicCartIncreaseItemController.java=UTF-8
+encoding//src/controller/PublicCartRemoveItemController.java=UTF-8
 encoding//src/controller/PublicListProductsController.java=UTF-8
 encoding//src/model/dao/CategoryDao.java=UTF-8
 encoding//src/model/dao/ProductsDao.java=UTF-8
